--- a/modelling/car-state-space/CMakeLists.txt
+++ b/modelling/car-state-space/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(${PROJECT_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/car_nonlinear.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/car_nonlinear_vx.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/car_linear.cpp
     ${CASADI_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/../mt-tools/src/mt_tools.cpp
 )
